# InterpreterLang

./: CMakeLists.txt  SPECIFICATIONS.md  about.lang  file.lang  game.lang  main.cpp
lang/: built_in_runner.h  interpreter.cpp  interpreter.h  lang.h  stdlib.lang
lang/evaluator/: arithmetic_evaluator.h  cast_evaluator.h  group_evaluator.cpp  group_evaluator.h  truthy_evaluator.h  type_arithmetic.h
lang/executors/: built_in_runner.cpp  built_in_runner.h  control_flow_runner.h  loop_executor.h  var_setter.cpp  var_setter.h
lang/memory/: data.cpp  data.h  macro.h  memory.h  proc_manager.cpp  proc_manager.h  stack_frame.cpp  stack_frame.h  stack_manager.h  stack_memory.cpp  stack_memory.h  type_registry.h
lang/stdlib/: builtins.lang  cast.lang  math.lang  math_constants.lang  stdlib.lang
lang/tokenizer/: id_to_name.cpp  id_to_name.h  scanner.cpp  scanner.h  token.h  token_group.h  token_grouper.cpp  token_grouper.h  tokens.h
